--- a/deployment.yaml
+++ b/deployment.yaml
@@ -56,7 +56,7 @@ spec:
             - containerPort: 8080
           volumeMounts:
             - name: reader-files
-              mountPath: /tmp
+              mountPath: /my-files
 
 ---
 
@@ -89,7 +89,7 @@ spec:
             - containerPort: 8080
           volumeMounts:
             - name: reader-files
-              mountPath: /tmp
+              mountPath: /my-files
 
 ---
 
