--- a/deployment.yaml
+++ b/deployment.yaml
@@ -162,7 +162,8 @@ spec:
 ---
 
 # Prerequisite: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/cloud/deploy.yaml
-
+# Add 127.0.0.1 writer.docker.internal to hosts file.
+# Writer Ingress
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -186,6 +187,8 @@ spec:
 
 ---
 
+# Add 127.0.0.1 reader.docker.internal to hosts file.
+# Reader Ingress
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
